--- a/client/src/components/Forms/forms.css
+++ b/client/src/components/Forms/forms.css
@@ -15,8 +15,12 @@
 
 .check-border {
   /* border: 1px solid black !important; */
-  padding: 7px;
+  background-clip: padding-box;
+  padding: 5px;
+  width: 100%;
   background-color: white;
+  border: 1px solid #ced4da;
+  border-radius: .25rem;
 }
 
 .input-width {
