--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,24 @@
 * {
   box-sizing: border-box;
 }
+a:link {
+  color: black;
+}
 
+/* visited link */
+a:visited {
+  color: green;
+}
+
+/* mouse over link */
+a:hover {
+  color: blue;
+}
+
+/* selected link */
+a:active {
+  color: blue;
+}
 /* .App {
   text-align: center;
 }
