--- a/client/src/components/Forms/forms.css
+++ b/client/src/components/Forms/forms.css
@@ -15,7 +15,14 @@
 
 .check-border {
   /* border: 1px solid black !important; */
-  padding: 7px;
+  display: block;
+  padding: 0.375rem 0.75rem;
+  line-height: 1.5;
+  background-clip: padding-box;
+  appearance: none;
+  border-radius: 0.25rem;
+  border: 1px solid #ced4da;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   background-color: white;
 }
 
