--- a/client/src/components/ProfileCard/profile.css
+++ b/client/src/components/ProfileCard/profile.css
@@ -2,7 +2,10 @@
     color: black !important;
     text-align: center;
     margin-top: 10px;
+    width: auto;
+    height: auto;
     border: 1px solid black;
+
 }
 
 .profile-img{
@@ -11,7 +14,7 @@
     align-items: center;
 }
 .user{
-    font-size: 3vw;
+    font-size: 1.5vw;
 }
 
 .user-body{
