--- a/client/src/pages/dashboard.css
+++ b/client/src/pages/dashboard.css
@@ -2,21 +2,26 @@
     margin: auto;
     margin-top: 20px;
     background-color: lightgrey;
-    width: 85vw;
+    width: 100%;
     height: 80vh;
     margin-bottom: 50px;
     border: 1px solid black;
     /* overflow-y: auto; */
     
 }
-
+.container-dash{
+    width: 90%;
+    margin: auto;
+    margin-bottom: 50px;
+}
 .dash-post {
     /* overflow-y: scroll; */
-    height: auto;
+    
     background-color: white !important;
     float: left;
-    width: 50%;
-    height: 100%;
+    width: 75%;
+    height: auto;
+    justify-items: center !important;
     overflow: scroll;
 }
 
@@ -27,13 +32,14 @@
 
 .dash-profile {
     float: left;
-    width: 50%;
+    width: 25%;
     height: auto;
     overflow: scroll;
 }
 
 .dash-row{
     height: 100%;
+    justify-items: center;
 }
 
 /* .container-scroll {
